core/target/x86_64-unknown-none/debug/build/num-rational-fb3b2440cc3b8abe/stderr
error[E0463]: can't find crate for `std`
  |
  = note: the `x86_64-unknown-none` target may not support the standard library
  = note: `std` is required by `autocfg_c7d5a49ae3393683_0` because it does not declare `#![no_std]`
  = help: consider building the standard library from source with `cargo build -Zbuild-std`

error: cannot resolve a prelude import

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0463`.
error: cannot find macro `format` in this scope
 --> <anon>:2:26
  |
2 | pub fn probe() { let _ = format!("{:e}", 0_isize); }
  |                          ^^^^^^

error: aborting due to 1 previous error

